<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item">ENTER ITEM</string>
    <string name="item_name">Item Name</string>
    <string name="item_size">Item Size</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_color">Item Color</string>
    <string name="save">SAVE</string>
    <string name="date_added">Date Added</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="edit_item">Edit Item</string>
    <string name="update_text">Update</string>
</resources>
