<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/enter_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/baby_Item_Name_Popup"
                android:layout_width="match_parent"
                android:hint="@string/item_name"
                android:layout_height="wrap_content"
                android:layout_below="@id/title" />

            <EditText
                android:id="@+id/baby_Size_Popup"
                android:hint="@string/item_size"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/baby_Item_Name_Popup" />

            <EditText
                android:id="@+id/baby_Quantity_Popup"
                android:layout_width="match_parent"
                android:hint="@string/item_quantity"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_below="@id/baby_Size_Popup" />



            <EditText
                android:id="@+id/baby_Color_Popup"
                android:layout_width="match_parent"
                android:hint="@string/item_color"
                android:layout_height="wrap_content"
                android:layout_below="@id/baby_Quantity_Popup" />

            <Button
                android:id="@+id/save_Button_Popup"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_below="@id/baby_Color_Popup"
                android:text="@string/save"
                android:layout_height="wrap_content" />



        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>